@@ -39,6 +39,7 @@ xx/xx/2004 autofs-4.1.4
 - merge Debian patch 044 044 update reference to mailing list (Arthur Korn).
 - provide ability to convert read-only NFS mounts to read-only bind mounts (Thorild Selen).
 - fix incorrect direct map entry lookup in yp module. 
+- merge most of RedHat init patch and the browse and umount loopback patches (Jeff Moyer).
 
 19/05/2004 autofs-4.1.3
 -----------------------
